# NicolePy

./: .gitignore  AGENTS.md  AST_MODEL.md  CHECKER_MODEL.md  CONTROL_FLOW_PHASE2_CASE.md  CONTROL_FLOW_PHASE2_IF.md  IMPLEMENTATION_MODEL.md  IMPLEMENTATION_PLAN_MODULES.md  LEXICAL_MODEL.md  NORMATIVE_SUMMARY.md  PARSER_MODEL.md  README.md  RESOLVER_MODEL.md  RUNTIME_ABI_PHASE1.md  RUNTIME_CALL_PHASE3.md  SPEC_TARGET.md  STANDARD_BUILTINS_MODEL.md  pyproject.toml
.github/workflows/: tests.yml
docs/: implementation-roadmap-v0.14.0-purity-effects.md  release-v0.15.0-collection-core-aligned.md  runtime-collection-core-phase1.md  runtime-list-phase2.md  runtime-map-core-phase1.md  runtime-quotations-call.md
docs/migration/: nicole_v0.2.0_host_opaque_types_plan.md
docs/milestones/: diagnostics-multifile-runtime-plan.md  phase-a-frontend-spec-surface.md
examples/birthday_cli/: README.md  main.nic
src/nicole/: __init__.py  application.py  ast_nodes.py  checker.py  compiler.py  diagnostic_renderer.py  errors.py  host_abi.py  interpreter.py  ir.py  lexer.py  parser.py  pipeline.py  resolver.py  runtime.py  signature_collector.py  source.py  standard_symbols.py  symbols.py  tokens.py
tests/: __init__.py  test_application.py  test_ast_nodes.py  test_checker.py  test_compiler.py  test_diagnostics.py  test_host_abi.py  test_lexer.py  test_parser.py  test_pipeline.py  test_resolver.py  test_runtime.py  test_signature_collector.py  test_standard_symbols.py  test_tokens.py
tests/examples/: test_birthday_cli.py
